--- a/app/views/users/edit/edit-geological-form.template.html
+++ b/app/views/users/edit/edit-geological-form.template.html
@@ -90,6 +90,7 @@
 					<td><label>16. Loại mẫu vật <span class="has-required">(*)</span>:</label></td>
 					<td>
 						<select required class="select-box" ng-init="" title="{{tooltips[16]}}" name="loaiMau" ng-model="data.loaiMau">
+							<option value=""></option>
 							<option value="Mẫu nghiên cứu">Mẫu nghiên cứu</option>
 							<option value="Mẫu trưng bày">Mẫu trưng bày</option>
 							<option value="Mẫu type">Mẫu type</option>
@@ -315,6 +316,7 @@
 					<td><label>46. Loại mẫu <span class="has-required">(*)</span>:</label></td>
 					<td>
 						<select required class="select-box" ng-init="" title="{{tooltips[56]}}" name="loaiMauVat" ng-model="data.loaiMauVat">
+							<option value=""></option>
 							<option value="Mẫu đá">Mẫu đá </option>
 							<option value="Mẫu khoáng vật">Mẫu khoáng vật</option>
 							<option value="Mẫu khoáng sản">Mẫu khoáng sản</option>
@@ -409,6 +411,7 @@
 					<td><label>62. Hình thức nhập mẫu:</label></td>
 					<td>
 						<select class="select-box" ng-init="" title="{{tooltips[72]}}" name="hinhThucNhapMau" ng-model="data.hinhThucNhapMau">
+							<option value=""></option>
 							<option value="Thu thập">Thu thập</option>
 							<option value="Hiến tặng">Hiến Tặng</option>
 							<option value="Khác">Khác</option>
@@ -420,6 +423,7 @@
 					<td><label>63. Trao đổi mẫu: </label></td>
 					<td>
 						<select class="select-box" ng-init="" title="{{tooltips[73]}}" name="traoDoiMau" ng-model="data.traoDoiMau">
+							<option value=""></option>
 							<option value="Có thể">Có thể</option>
 							<option value="Không thể">Không thể</option>
 						</select>
@@ -429,6 +433,7 @@
 					<td><label>64. Vay mượn mẫu:</label></td>
 					<td>
 						<select class="select-box" ng-init="" title="{{tooltips[74]}}" name="vayMuon" ng-model="data.vayMuon">
+							<option value=""></option>
 							<option value="Có thể">Có thể</option>
 							<option value="Không thể">Không thể</option>
 						</select>
