--- a/app/views/users/edit/edit-land-form.template.html
+++ b/app/views/users/edit/edit-land-form.template.html
@@ -90,6 +90,7 @@
 					<td><label>16. Loại mẫu vật <span class="has-required">(*)</span>:</label></td>
 					<td>
 						<select required title="{{tooltips[16]}}" name="loaiMau" class="select-box" ng-init="" ng-model="data.loaiMau">
+							<option value=""></option>
 							<option value="Mẫu nghiên cứu">Mẫu nghiên cứu</option>
 							<option value="Mẫu trưng bày">Mẫu trưng bày</option>
 							<option value="Mẫu type">Mẫu type</option>
@@ -380,6 +381,7 @@
 					<td><label>63. Hình thức nhập mẫu:</label></td>
 					<td>
 						<select class="select-box" ng-init="" title="{{tooltips[71]}}" name="hinhThucNhapMau" ng-model="data.hinhThucNhapMau">
+							<option value=""></option>
 							<option value="Thu thập">Thu thập</option>
 							<option value="Hiến tặng">Hiến Tặng</option>
 							<option value="Khác">Khác</option>
@@ -391,6 +393,7 @@
 					<td><label>64. Trao đổi mẫu: </label></td>
 					<td>
 						<select class="select-box" ng-init="" title="{{tooltips[72]}}" name="traoDoiMau" ng-model="data.traoDoiMau">
+							<option value=""></option>
 							<option value="Có thể">Có thể</option>
 							<option value="Không thể">Không thể</option>
 						</select>
@@ -400,6 +403,7 @@
 					<td><label>65. Vay mượn mẫu:</label></td>
 					<td>
 						<select class="select-box" ng-init="" title="{{tooltips[73]}}" name="vayMuon" ng-model="data.vayMuon">
+							<option value=""></option>
 							<option value="Có thể">Có thể</option>
 							<option value="Không thể">Không thể</option>
 						</select>
