--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -144,6 +144,7 @@
 					<td><label>16. Loại mẫu vật <span class="has-required">(*)</span>:</label></td>
 					<td>
 						<select required title="{{tooltips[29]}}" name="loaiMau" ng-init="" class="select-box" ng-model="data.loaiMau">
+							<option value=""></option>
 							<option value="Mẫu nghiên cứu">Mẫu nghiên cứu</option>
 							<option value="Mẫu trưng bày">Mẫu trưng bày</option>
 							<option value="Mẫu type">Mẫu type</option>
@@ -431,6 +432,7 @@
 					<td><label>57. Hình thức nhập mẫu:</label></td>
 					<td>
 						<select class="select-box" title="{{tooltips[84]}}" ng-init="" name="hinhThucNhapMau" ng-model="data.hinhThucNhapMau">
+							<option value=""></option>
 							<option value="Thu thập">Thu thập</option>
 							<option value="Hiến tặng">Hiến Tặng</option>
 							<option value="Khác">Khác</option>
@@ -442,6 +444,7 @@
 					<td><label>58. Trao đổi mẫu: </label></td>
 					<td>
 						<select title="{{tooltips[85]}}" name="traoDoiMau" ng-init="" class="select-box" ng-model="data.traoDoiMau">
+							<option value=""></option>
 							<option value="Có thể">Có thể</option>
 							<option value="Không thể">Không thể</option>
 						</select>
@@ -451,6 +454,7 @@
 					<td><label>59. Vay mượn mẫu:</label></td>
 					<td>
 						<select class="select-box" ng-init="" title="{{tooltips[86]}}" name="vayMuon" ng-model="data.vayMuon">
+							<option value=""></option>
 							<option value="Có thể">Có thể</option>
 							<option value="Không thể">Không thể</option>
 						</select>
