--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -45,7 +45,7 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= user.fullname %> </a>
 					<ul class="dropdown-menu">
 						<li><a href="/log">Lịch sử</a></li>
-						<li><a href="/app/#!/bai-dang">Quản lý bài đăng</a></li>
+						<li><a href="/app/#!/bai-dang">Quản lý mẫu vật</a></li>
 						<li><a href="/config">Cài đặt</a></li>
 						<li><a href="/auth/logout">Đăng xuất</a></li>
 					</ul>
