--- a/views/config.ejs
+++ b/views/config.ejs
@@ -24,7 +24,7 @@
 							<div class="panel panel-primary panel-shadow">
 								<div class="panel-heading">
 									<h4 class="panel-title">
-										<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Thêm cấp</a>
+										<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Thêm loại quyền mới</a>
 									</h4>
 								</div>
 								<div id="collapse1" class="panel-collapse collapse in">
@@ -98,7 +98,7 @@
 							<div class="panel panel-danger panel-shadow-danger">
 								<div class="panel-heading">
 									<h4 class="panel-title">
-										<a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Xóa cấp</a>
+										<a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Xóa loại quyền</a>
 									</h4>
 								</div>
 								<div id="collapse2" class="panel-collapse collapse">
