--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -181,7 +181,7 @@
 							<tr>
 								<td>Tỉnh/Thành phố <span class="has-required">(*)</span>: </td>
 								<td>
-									<select class="select-box" title="{{tooltips[33]}}" name="tinh" required ng-model= "tinh" ng-change="cityChange()">
+									<select class="select-box" title="{{tooltips[33]}}" name="tinh" required ng-model= "tinh" ng-click="cityChange()">
 										<option ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " + city.name}}</option>
 									</select>
 								</td>
@@ -189,7 +189,7 @@
 							<tr>
 								<td>Huyện <span class="has-required">(*)</span>:</td>
 								<td>
-									<select class="select-box" title="{{tooltips[34]}}" name="huyen" required ng-model= "huyen" ng-change="districtChange()">
+									<select class="select-box" title="{{tooltips[34]}}" name="huyen" required ng-model= "huyen" ng-click="districtChange()">
 										<option ng-repeat="(key, district) in districts | customCity: tinh" value="{{key}}">{{district.type + " " + district.name}}</option>
 									</select>
 								</td>
