fix conflict land form

--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -249,7 +249,7 @@
 				</tr>
 
 				<tr>
-					<td><label>39. Thông tin khác </label></td>
+					<td><label>39. Thông tin khác: </label></td>
 					<td><input type="text" ng-model="data.thongTinKhac5" title="{{tooltips[45]}}" name="thongTinKhac5" class="input-form"></td>
 				</tr>
 			</table>
