--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -27,10 +27,12 @@
 				<td><label>03. Số hiệu BTTNVN:</label></td>
 				<td><input type="text" title="{{tooltips[3]}}" name="soHieuBTTNVN" ng-model="data.soHieuBTTNVN" class="input-form"></td>
 			</tr>
-			<tr>
-				<td><label>04. Mã kí hiệu mẫu vật quốc tế:</label></td>
+
+<!-- 			<tr>
+				<td><label >04. Mã kí hiệu mẫu vật quốc tế:</label></td>
 				<td><input type="text" title="{{tooltips[4]}}" name="maKyHieuMauVatQuocTe" ng-model="data.maKyHieuMauVatQuocTe" class="input-form" ></td>
-			</tr>
+			</tr> -->
+
 			<tr>
 				<td><label>05. Các kí hiệu mẫu vật khác:</label></td>
 				<td><input type="text"  ng-model="data.kyHieuMauVatKhac" title="{{tooltips[5]}}" name="kyHieuMauVatKhac" class="input-form"></td>
@@ -131,10 +133,11 @@
 		<div class="container map-detail" style="margin-top: 50px;">
 		<table>
 			<h3 class="h3-title">SỐ LƯỢNG VÀ CHẤT LƯỢNG MẪU VẬT</h3>
-			<tr>
-				<td><label>14. Số lượng mẫu vật:</label></td>
+
+<!-- 			<tr>
+				<td><label >14. Số lượng mẫu vật:</label></td>
 				<td><input type="number" ng-model="data.soLuongMauVat" min="0" title="{{tooltips[27]}}" name="soLuongMauVat" class="input-form"></td>
-			</tr>
+			</tr> -->
 			<tr>
 				<td><label>15. Số lượng tiêu bản:</label></td>
 				<td><input type="number" min="0" ng-model="data.soLuongTieuBan" title="{{tooltips[28]}}" name="soLuongTieuBan" class="input-form"></td>
@@ -152,7 +155,72 @@
 			</tr>
 			<tr>
 				<td><label>17. Kích thước mẫu <span class="has-required"> (*)</span>:</label></td>
-				<td><input type="text" ng-model="data.kichThuocMau" title="{{tooltips[30]}}" name="kichThuocMau" class="input-form" required></td>
+				<td>
+					<table style="margin-left: 7px;">						
+						<tr>
+						<td><span>Chieu cao</span></td>
+							<td>					    
+							    <span class="box">
+							      <input type="text" name="data" class="datatext" id="datatext">
+							      <select class="contentselect" id="contentselect">
+							          <option value="centimet">cm</option>
+							          <option value="met">m</option>
+							       </select>
+							    </span>
+							</td>
+						</tr>
+						<tr>
+							<td><span>Chieu rong</span></td>
+							<td>					    
+							    <span class="box">
+							      <input type="text" name="data" class="datatext" id="datatext">
+							      <select class="contentselect" id="contentselect">
+							          <option value="centimet">cm</option>
+							          <option value="met">m</option>
+							       </select>
+							    </span>
+							</td>
+						</tr>
+					
+						<tr>
+							<td><span>Chieu dai</span></td>
+							<td>					    
+							    <span class="box">
+							      <input type="text" name="data" class="datatext" id="datatext">
+							      <select class="contentselect" id="contentselect">
+							          <option value="centimet">cm</option>
+							          <option value="met">m</option>
+							       </select>
+							    </span>
+							</td>
+						</tr>
+						<tr>
+							<td><span>trong luong</span></td>
+							<td>					    
+							    <span class="box">
+							      <input type="text" name="data" class="datatext" id="datatext">
+							      <select class="contentselect" id="contentselect">
+							          <option value="centimet">cm</option>
+							          <option value="met">m</option>
+							       </select>
+							    </span>
+							</td>
+						</tr>
+					
+						<tr>		
+							<td><span>The tich</span></td>
+							<td>					    
+							    <span class="box">
+							      <input type="text" name="data" class="datatext" id="datatext">
+							      <select class="contentselect" id="contentselect">
+							          <option value="centimet">cm</option>
+							          <option value="met">m</option>
+							       </select>
+							    </span>
+							</td>
+						</tr>						
+					</table>
+				</td>
 			</tr>
 			<tr>
 				<td><label>18. Tình trạng mẫu <span class="has-required"> (*)</span>:</label></td>
@@ -188,7 +256,7 @@
 				<td ng-controller="PlaceController">
 					<table>
 						<tr>
-							<td>Quốc gia<span class="has-required"> (*)</span>: </td>
+							<td class="align-td">Quốc gia<span class="has-required"> (*)</span>: </td>
 							<td>
 								<select class="select-box" title="{{tooltips[37]}}" name="quocGia" required>
 									<option value="Việt Nam">Việt Nam</option>
@@ -196,7 +264,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>Tỉnh/Thành phố<span class="has-required"> (*)</span>: </td>
+							<td class="align-td">Tỉnh/Thành phố<span class="has-required"> (*)</span>: </td>
 							<td>
 								<select class="select-box" title="{{tooltips[38]}}" name="tinh" required ng-model= "tinh" ng-click="cityChange()">
 									<option ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " + city.name}}</option>
@@ -204,7 +272,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>Huyện<span class="has-required"> (*)</span>:</td>
+							<td class="align-td">Huyện<span class="has-required"> (*)</span>:</td>
 							<td>
 								<select class="select-box" title="{{tooltips[39]}}" name="huyen" required ng-model= "huyen" ng-click="districtChange()">
 									<option ng-repeat="(key, district) in districts | customCity: tinh" value="{{key}}">{{district.type + " " + district.name}}</option>
@@ -212,7 +280,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>Xã<span class="has-required"> (*)</span>: </td>
+							<td class="align-td">Xã<span class="has-required"> (*)</span>: </td>
 							<td>
 								<select class="select-box" ng-model="xa" title="{{tooltips[40]}}" name="xa" required>
 									<option ng-repeat="(key, ward) in wards | customDistrict: huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
@@ -220,7 +288,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>Thôn/Xóm: </td>
+							<td class="align-td">Thôn/Xóm: </td>
 							<td><input type="text" ng-model="thon" title="{{tooltips[41]}}" name="thon" id="thon" class="input-form"></td>
 						</tr>
 					</table>
