--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -27,10 +27,11 @@
 					<td><label>03. Số hiệu BTTNVN:</label></td>
 					<td><input type="text"  title="{{tooltips[3]}}" name="soHieuBTTNVN" ng-model="data.soHieuBTTNVN" class="input-form"></td>
 				</tr>
-				<tr>
-					<td><label>04. Mã kí hiệu mẫu vật quốc tế:</label></td>
+
+<!-- 				<tr>
+					<td><label >04. Mã kí hiệu mẫu vật quốc tế:</label></td>
 					<td><input type="text"  title="{{tooltips[4]}}" name="maKyHieuMauVatQuocTe" ng-model="data.maKyHieuMauVatQuocTe" class="input-form"></td>
-				</tr>
+				</tr> -->
 
 				<tr>
 					<td><label>05. Các kí hiệu mẫu vật khác:</label></td>
@@ -78,10 +79,10 @@
 		<div class="container map-detail" style="margin-top: 50px;">
 			<table>
 				<h3 class="h3-title">SỐ LƯỢNG VÀ CHẤT LƯỢNG MẪU VẬT</h3>
-				<tr>
-					<td><label>14. Số lượng mẫu vật:</label></td>
+<!-- 				<tr>
+					<td><label >14. Số lượng mẫu vật:</label></td>
 					<td><input type="number" min="0" title="{{tooltips[14]}}" name="soLuongMauVat" ng-model="data.soLuongMauVat" class="input-form"></td>
-				</tr>
+				</tr> -->
 				<tr>
 					<td><label>15. Số lượng tiêu bản:</label></td>
 					<td><input type="number" min = "0" title="{{tooltips[15]}}" name="soLuongTieuBan" ng-model="data.soLuongTieuBan" class="input-form"></td>
@@ -136,7 +137,7 @@
 					<td ng-controller="PlaceController">
 					<table>
 						<tr>
-							<td>Quốc gia<span class="has-required">(*)</span>: </td>
+							<td class="align-td">Quốc gia<span class="has-required">(*)</span>: </td>
 							<td>
 								<select class="select-box" title="{{tooltips[24]}}" name="quocGia" required>
 									<option value="Việt Nam">Việt Nam</option>
@@ -144,7 +145,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>Tỉnh/Thành phố<span class="has-required">(*)</span>: </td>
+							<td class="align-td">Tỉnh/Thành phố<span class="has-required">(*)</span>: </td>
 							<td>
 								<select class="select-box" title="{{tooltips[25]}}" name="tinh" required ng-model= "tinh" ng-click="cityChange()">
 									<option ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " + city.name}}</option>
@@ -152,7 +153,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>Huyện<span class="has-required">(*)</span>:</td>
+							<td class="align-td">Huyện<span class="has-required">(*)</span>:</td>
 							<td>
 								<select class="select-box" title="{{tooltips[26]}}" name="huyen" required ng-model= "huyen" ng-click="districtChange()">
 									<option ng-repeat="(key, district) in districts | customCity: tinh" value="{{key}}">{{district.type + " " + district.name}}</option>
@@ -160,7 +161,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>Xã<span class="has-required">(*)</span>: </td>
+							<td class="align-td">Xã<span class="has-required">(*)</span>: </td>
 							<td>
 								<select class="select-box" ng-model="xa" title="{{tooltips[27]}}" name="xa" required>
 									<option ng-repeat="(key, ward) in wards | customDistrict: huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
@@ -168,7 +169,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>Thôn/Xóm: </td>
+							<td class="align-td">Thôn/Xóm: </td>
 							<td><input type="text" ng-model="thon" title="{{tooltips[28]}}" name="thon" id="thon" class="input-form"></td>
 						</tr>
 					</table>
