--- a/app/asset/css/main.css
+++ b/app/asset/css/main.css
@@ -137,6 +137,42 @@ a.nav:hover{
 .text-errors{
     color: red;
 }
+/*--------------New--------------*/
+.row {
+    margin-left: 5px;
+}
+        
+/*.label{
+    float:left;
+}*/
+*:focus {
+    outline: none;
+}
+
+.align-td{
+    text-align: right;
+}
+.datatext {
+    border-top: #ccc 1px solid; 
+    border-left: #ccc 1px solid; 
+    /*color: #ccc; */
+    border-radius: 4px;
+    border-bottom: #ccc 1px solid;
+    height: 30px;
+    position:relative;
+    /*left:3px;*/
+    margin: 3px;
+}
+.contentselect {
+    /*position:absolute;*/
+    border-top: #ccc 1px solid; 
+    height:30px;
+    border-radius: 4px; 
+    /*color: #ccc; */
+    border-bottom: #ccc 1px solid;
+    border-left:none;
+}
+/*--------------end-New--------------*/
 /*------------------END-FORM_DATA---------------------*/
 
 /*------------------DETAILS---------------------*/
