--- a/views/display.ejs
+++ b/views/display.ejs
@@ -25,7 +25,7 @@
 					if (obj instanceof Array){
 						var result =  obj.reduce(function (preStr, curElement){
 							// console.log(curElement.split('_+_')[1]);
-							preStr += '<a href="' + sp + '/' + curElement + '">' + curElement.split('_+_')[1] + '</a><br/>\n';
+							preStr += '<a href="/content/download' + sp + '/' + curElement + '">' + curElement.split('_+_')[1] + '</a><br/>\n';
 							return preStr;
 						}, '');
 						return result;
