--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -161,8 +161,8 @@
 						<td><span>Chieu cao</span></td>
 							<td>					    
 							    <span class="box">
-							      <input type="text" name="data" class="datatext" id="datatext">
-							      <select class="contentselect" id="contentselect">
+							      <input type="text" name="chieuCao" class="datatext" id="datatext">
+							      <select class="contentselect" id="contentselect" name="donVi_chieuCao">
 							          <option value="centimet">cm</option>
 							          <option value="met">m</option>
 							       </select>
@@ -173,10 +173,10 @@
 							<td><span>Chieu rong</span></td>
 							<td>					    
 							    <span class="box">
-							      <input type="text" name="data" class="datatext" id="datatext">
-							      <select class="contentselect" id="contentselect">
+							      <input type="text" name="chieuRong" class="datatext" id="datatext">
+							      <select class="contentselect" id="contentselect" name="donVi_chieuRong">
 							          <option value="centimet">cm</option>
-							          <option value="met">m</option>
+							          <option value="met">met</option>
 							       </select>
 							    </span>
 							</td>
@@ -186,10 +186,10 @@
 							<td><span>Chieu dai</span></td>
 							<td>					    
 							    <span class="box">
-							      <input type="text" name="data" class="datatext" id="datatext">
-							      <select class="contentselect" id="contentselect">
+							      <input type="text" name="chieuDai" class="datatext" id="datatext">
+							      <select class="contentselect" id="contentselect" name="donVi_chieuDai">
 							          <option value="centimet">cm</option>
-							          <option value="met">m</option>
+							          <option value="met">met</option>
 							       </select>
 							    </span>
 							</td>
@@ -198,10 +198,10 @@
 							<td><span>trong luong</span></td>
 							<td>					    
 							    <span class="box">
-							      <input type="text" name="data" class="datatext" id="datatext">
-							      <select class="contentselect" id="contentselect">
-							          <option value="centimet">cm</option>
-							          <option value="met">m</option>
+							      <input type="text" name="trongLuong" class="datatext" id="datatext">
+							      <select class="contentselect" id="contentselect" name="donVi_trongLuong">
+							          <option value="centimet">gram</option>
+							          <option value="met">kg</option>
 							       </select>
 							    </span>
 							</td>
@@ -211,10 +211,10 @@
 							<td><span>The tich</span></td>
 							<td>					    
 							    <span class="box">
-							      <input type="text" name="data" class="datatext" id="datatext">
-							      <select class="contentselect" id="contentselect">
-							          <option value="centimet">cm</option>
-							          <option value="met">m</option>
+							      <input type="text" name="theTich" class="datatext" id="datatext">
+							      <select class="contentselect" id="contentselect" name="donVi_theTich">
+							          <option value="centimet">cm3</option>
+							          <option value="met">m3</option>
 							       </select>
 							    </span>
 							</td>
